# retrieval-metrics

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
scripts/: setup.sh
src/retrieval_metrics/: __init__.py  schemas.py
src/retrieval_metrics/core/: metrics.py
tests/unit/: test_metrics.py
